--- a/receita3/index.html
+++ b/receita3/index.html
@@ -1,20 +1,36 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <meta charset="UTF-8">
+  <meta charset="UTF-8"/>
+  <link rel="stylesheet" href="style.css"/>
 </head>
 
 <body>
-  <div id="meu amor"><button id="botaoCarregar">Carregando cervejas...</button></div>
+  <div><button id="botaoCarregar">Carregando cervejas...</button></div>
+  <div id="meu_amor" class="fade-out"></div>
 </body>
 
 <script>
   function carregarDiv() {
-    let div = document.getElementById("meu amor")
-    div.innerHTML = `<h1>Guinness</h1>`
+    let div = document.getElementById("meu_amor");
+
+    if (!statusAmor) {
+      div.innerHTML = `<h1>Guinness</h1>`;
+      div.classList.remove('fade-out');
+      div.classList.add('fade-in');
+    } else {
+      div.classList.remove('fade-in');
+      div.classList.add('fade-out');
+      setTimeout(() => {
+        div.innerHTML = ''; // Esvazia a div após o fade out
+      }, 1000); // O tempo deve ser o mesmo da transição do CSS (1s)
+    }
+    statusAmor = !statusAmor;
   }
 
-  let botao = document.getElementById("botaoCarregar")
-  botao.addEventListener("click", carregarDiv)
+  let statusAmor = false;
+  let botao = document.getElementById("botaoCarregar");
+  botao.addEventListener("click", carregarDiv);
 </script>
+
 </html>
