--- a/receita12/index.html
+++ b/receita12/index.html
@@ -1,14 +1,13 @@
 <!DOCTYPE html>
-<html>
+<html lang="pt-br">
 
 <head>
-    <title>ReceitaReact - Classes</title>
+    <title>ReceitaReact - 3</title>
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
     <div id="app">
-
     </div>
 
     <script src="libs/react.js"></script>
@@ -16,92 +15,49 @@
     <script src="libs/babel.js"></script>
 
     <script type="text/babel">
-        const bebidas = [
-            { nome: "Havana", marca: "Engenho Anísio Santiago", teorAlcoolico: "45%" },
-            { nome: "Ypióca", marca: "Ypióca Agroindustrial", teorAlcoolico: "40%" },
-            { nome: "Velho Barreiro", marca: "Indústria de Bebidas Tatuzinho", teorAlcoolico: "39%" },
-        ];
-
-        class Cabecalho extends React.Component {
-            render() {
-                const {texto} = this.props;
-                return (
-                    <h1>{texto}</h1>
-                );
-            }
-        }
-
-        class LinhaTabela extends React.Component {
-            render() {
-                const { nome, marca, teorAlcoolico } = this.props;
-                return (
-                    <tr>
-                        <td>{nome}</td>
-                        <td>{marca}</td>
-                        <td>{teorAlcoolico}</td>
-                    </tr>
-                );
-            }
-        }
-
-        class TabelaBebidas extends React.Component {
-            render() {
-                const {titulo} = this.props;
-                return (
-                    <div>
-                        <Cabecalho texto={titulo} />
-                        <table id="tabela" border="1" className="custom_table">
-                            <thead>
-                                <tr><th>Nome</th><th>Marca</th><th>Teor Alcoólico</th></tr>
-                            </thead>
-                            <tbody>
-                                {bebidas.map((b, index) => (
-                                    <LinhaTabela
-                                        key={index}
-                                        nome={b.nome}
-                                        marca={b.marca}
-                                        teorAlcoolico={b.teorAlcoolico}
-                                    />
-                                ))}
-                            </tbody>
-                        </table>
-                    </div>
-                )
-            }
-
-        }
-        const TabelaBebidas__ = ({titulo}) => {
+        const TabelaBebidas = ({ titulo, cabecalhos, conteudo }) => {
             return (
                 <div>
-                    <Cabecalho texto={titulo} />
-                    <table id="tabela" border="1">
+                    <h1>{titulo}</h1>
+                    <table id="tabela" border="1" className="custom_table">
                         <thead>
-                            <tr><th>Nome</th><th>Marca</th><th>Teor</th></tr>
+                            <tr>
+                                {cabecalhos.map((index, c) => (<th key={index}>{cabecalhos[c]}</th>))}
+                            </tr>
                         </thead>
+                        {/* ´ */}
+
                         <tbody>
-                            {bebidas.map((b, index) => (
-                                    <LinhaTabela
-                                        key={index}
-                                        nome={b.nome}
-                                        marca={b.marca}
-                                        teorAlcoolico={b.teorAlcoolico}
-                                    />
-                                ))}
+                            {conteudo.map((linha, indexLinha) => (
+                                <tr key={indexLinha}>
+                                    {linha.map((item, indexColuna) => (
+                                        <td key={indexColuna}>{item}</td>
+                                    ))}
+                                </tr>
+                            ))}
                         </tbody>
                     </table>
                 </div>
-            );
-
+            )
         }
 
+        const valoresCabecalhos = ["Nome", "Marca", "Teor", "Local de Origem"]
+        const valoresConteudo = [
+            ["Havana", "Engenho Anísio Santiago", "48%", "Salinas, MG"],
+            ["51", "Cia Müller", "39%", "Pirassununga, SP"],
+            ["Seleta", "Seleta", "42%", "Salinas, MG"],
+            ["Vale Verde", "Vale Verde", "40%", "Betim, MG"],
+            ["Salinas", "Indústria de Bebidas Salinas", "45%", "Salinas, MG"],
+            ["Praianinha", "Praianinha", "39%", "Praia Grande, SP"],
+            ["Ypióca", "Ypióca", "39%", "Maranguape, CE"],
+            ["Velho Barreiro", "Indústria Reunidas de Bebidas Tatuzinho", "39%", "Jundiaí, SP"],
+            ["Magnífica", "Magnífica", "43%", "Miguel Pereira, RJ"],
+            ["São Francisco", "Engarrafamento Pitú", "39%", "Itabaiana, SE"]
+        ];
         ReactDOM.render(
-            <div>
-                <TabelaBebidas titulo="Tabela de Bebidas Alcoólicas" />
-                {/* <TabelaBebidas__ titulo="Tabela de arguardente" />*/}
-            </div>
+            <TabelaBebidas titulo="minha tabela de cana" cabecalhos={valoresCabecalhos} conteudo={valoresConteudo} />
             ,
             document.getElementById("app"))
-
     </script>
 </body>
 
